<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.domain.celticcelery.optcstaminacalculator.StaminaToTime">

    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/layoutStamina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/currentStaminaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/current_stamina"
            android:inputType="number" />

        <EditText
            android:id="@+id/desiredStaminaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/desired_stamina"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutStamina">

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickCalculate"
            android:text="@string/calculate_btn" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickReset"
            android:text="@string/reset_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTimes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutButtons">

        <TextView
            android:id="@+id/currentTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/currentTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/desiredTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expected_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/expectedTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>

